--- a/angular.json
+++ b/angular.json
@@ -5,11 +5,6 @@
   "projects": {
     "SISES-APP": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -34,7 +29,8 @@
             ],
             "scripts": [
               "src/assets/js/main.js"
-            ]
+            ],
+            "baseHref": "/SISES/"  
           },
           "configurations": {
             "production": {
