--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sises-app",
+            "outputPath": "dist/SISES",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -30,7 +30,7 @@
             "scripts": [
               "src/assets/js/main.js"
             ],
-            "baseHref": "/SISES/"  
+            "baseHref": "/SISES/"
           },
           "configurations": {
             "production": {
