--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,34 +3,41 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger deployment on push to the main branch
+      - main  # Trigger the workflow on push to the 'main' branch
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # Set up Node.js
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'  # Set your desired Node.js version
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Set Node.js version to 16
 
-    # Install dependencies
-    - name: Install dependencies
-      run: npm install
+      # Install dependencies
+      - name: Install dependencies
+        run: npm install
 
-    # Build the Angular project
-    - name: Build Angular project
-      run: npm run build -- --configuration production
+      # Build the Angular application
+      - name: Build Angular app
+        run: npm run build -- --prod
 
-    # Deploy to GitHub Pages
-    - name: Deploy to GitHub Pages
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
-        npx angular-cli-ghpages --dir=dist/SISES --no-silent --repo=https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/khalilbenjemmaa/SISES.git
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        run: |
+          # Configure Git
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+          # Deploy to GitHub Pages
+          npx angular-cli-ghpages --dir=dist/SISES --no-silent --repo=https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/khalilbenjemmaa/SISES.git
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token from secrets
+
