--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Build the Angular application
       - name: Build Angular app
-        run: npm run build -- --prod
+        run: npm run build -- --configuration production
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
