--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,10 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-          # Deploy to GitHub Pages
-          npx angular-cli-ghpages --dir=dist/SISES --no-silent --repo=https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/khalilbenjemmaa/SISES.git
+          # Deploy to GitHub Pages using the PAT
+          npx angular-cli-ghpages --dir=dist/SISES --no-silent --repo=https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/khalilbenjemmaa/SISES.git
 
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the GitHub token from secrets
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the new secret for authentication
+
 
